Add : 로그인,회원가입,문자인증,닉네임 중복확인 View / tests.py작성

--- a/.gitignore
+++ b/.gitignore
@@ -279,3 +279,6 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/python,django,git,vscode,windows,linux
+
+# twillo.env
+twilio.env
