--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,37 @@
 asgiref==3.2.10
 astroid==2.4.2
-beautifulsoup4==4.9.1
-certifi==2020.4.5.1
-cffi==1.14.0
+backcall==0.2.0
+bcrypt==3.2.0
+certifi==2020.6.20
+cffi==1.14.3
 chardet==3.0.4
-conda==4.8.3
-conda-package-handling==1.7.0
-cryptography==2.9.2
-Django==3.1.1
-idna==2.9
-isort==5.5.3
+decorator==4.4.2
+Django==3.1.2
+django-cors-headers==3.5.0
+idna==2.10
+ipython==7.19.0
+ipython-genutils==0.2.0
+isort==5.6.4
+jedi==0.17.2
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
-pycosat==0.6.3
+mysqlclient==2.0.1
+parso==0.7.1
+pexpect==4.8.0
+pickleshare==0.7.5
+prompt-toolkit==3.0.8
+ptyprocess==0.6.0
 pycparser==2.20
+Pygments==2.7.2
+PyJWT==1.7.1
 pylint==2.6.0
-pyOpenSSL==19.1.0
-PySocks==1.7.1
-pytz==2020.1
-requests==2.23.0
-ruamel-yaml==0.15.87
-six==1.14.0
-soupsieve==2.0.1
-sqlparse==0.3.1
-toml==0.10.1
-tqdm==4.46.0
-urllib3==1.25.8
+pytz==2020.4
+requests==2.24.0
+six==1.15.0
+sqlparse==0.4.1
+toml==0.10.2
+traitlets==5.0.5
+twilio==6.47.0
+urllib3==1.25.11
+wcwidth==0.2.5
 wrapt==1.12.1
